added some additional features and fixed some responsiveness.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div id="bottom-middle">
         <div id="quote">
           <form id="personaliseQuote">
-            <input type="text" id="inputQuote" placeholder="Input your personalise quote here." required>
+            <input type="text" id="inputQuote"  autocomplete="off"  placeholder="Input your personalise quote here." required>
           </form>
         </div>
         <div id="botmidToolTip">
