--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Momentum</title>
   <link rel="icon" href="./momentum_app.png"/>
   <link href="Momentum.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="WeatherApp.css" type="text/css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
 </head>
@@ -14,19 +15,42 @@
 <body>
   <div id="screen">
     
+
   <header>
     <div id="top-left">
-      <div id="links">
-        <!-- Links -->
+      <div id="links" style="z-index: 1000; color: white;">
+        
       </div>
       <div id="focus">
         <!-- Focus -->
       </div>
     </div>
     <div id="top-right">
-      <div>
         <!-- Temperature -->
-      </div>
+          <div id="weather-app-container">
+
+            <div class="weather-app">
+                <div class="weather-app placer">
+                    <search class="input-search-container">
+                      <form id = "input-form-container">
+                        <div id="input-container">
+                          <input list="search-result" placeholder="Search your place" id="place-name-input" type="text" />
+                          <datalist id="search-result"></datalist>
+                        </div>
+                        <button id="search-container" type="submit">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                          </svg>
+                        </button>
+                      </form>
+                    </search>
+                    <div class="weather-app details">
+                      Weather information is currently unavailable
+                    </div>
+                </div>
+            </div>
+          </div>
+ 
     </div>
   </header>
 
@@ -114,6 +138,8 @@
   </footer>
 
   </div>
+  <script type="module" src="DragAndDrop.js"></script>
+  <script src="WeatherFeature.js"></script>
   <script src="Momentum.js"></script>
 </body>
 
